--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/lodash": "^4.14.194",
     "bootstrap": "^5.2.3",
     "jalali-moment": "^3.3.11",
     "rxjs": "~7.8.0",
