--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.194",
     "bootstrap": "^5.2.3",
     "jalali-moment": "^3.3.11",
+    "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
